doplnenie log objektu + rozchadzanie command line